--- a/Phase II - LaTex/main.tex
+++ b/Phase II - LaTex/main.tex
@@ -277,6 +277,19 @@ $$
 \item SHAP interpret how feature increase or decrease prediction with reference to the PDP and show how consistent your results
 \end{itemize}
 
+    \begin{figure}[h]
+	\centering
+	\includegraphics[width=1\textwidth, height =.15\textheight]{shap.png}
+	\caption{SHAP for a true prediction}
+	\end{figure}
+
+    \begin{figure}[h]
+	\centering
+	\includegraphics[width=1\textwidth, height =.15\textheight]{shap2.png}
+	\caption{SHAP for a true prediction}
+	\end{figure}
+
+From the two shap plots ubove we can see that the most important features we get from permutation importance are the most relevant in the prediction and with shap we can see each feature contribution either it increase or decrease the prediction.
 
 
 \section{Candidate Classification Techniques}
